# gwspy

./: .gitignore  MANIFEST.in  README.md  genindex.html  gplates_ws_proxy.html  gwspy.html  index.html  modules.html  notes.md  objects.inv  py-modindex.html  pyproject.toml  requirements.txt  search.html  searchindex.js
.github/workflows/: build-doc.yml
_modules/: index.html
_modules/gplates_ws_proxy/: coastlines.html  geometry_utils.html  paleoearth.html  plate_model.html  quaternions.html  reconstruction.html  resample_line.html  rotation.html  spherical_triangle.html  subduction_teeth.html  topology.html  utils.html
_modules/gwspy/: coastlines.html  geometry_utils.html  paleoearth.html  plate_model.html  quaternions.html  reconstruction.html  resample_line.html  rotation.html  spherical_triangle.html  subduction_teeth.html  topology.html  utils.html
_sources/: gplates_ws_proxy.rst.txt  gwspy.rst.txt  index.rst.txt  modules.rst.txt
doc/: readme.md
doc/source/: conf.py  gplates_ws_proxy.rst  modules.rst
examples/: common.py  environment.yml  make_paleo_coastlines_movie.py  make_paleo_label_movie.py  paleo-coastlines.ipynb  plot_paleo_cities.py  plot_paleo_coastlines.py  plot_paleo_labels.py  plot_subduction_zones.py  plot_topological_features.py  plot_topological_plate_boundaries.py  plot_topological_plate_polygons.py  readme.md  reconstruct_shapely_points.py  run_all.sh  run_all_dev.sh
scripts/: build-doc.sh  build-workflow.sh  create-tag.py  pypi-publish.sh
src/gplates_proxy/: __init__.py  __main__.py  _auth.py  coastlines.py  gplates.py  plate_model.py  reconstruction.py  rotation_model.py
src/gplates_proxy/examples/: environment.yml  paleo-coastlines.ipynb  readme.md  reconstruct_points.py  reconstruct_shapely_points.py
src/gplates_proxy/test/: importer.py  test_coastlines.py  test_reconstruction.py
src/gplates_proxy/tests/: importer.py  test_reconstruction.py
src/gplates_ws_proxy/: __init__.py  coastlines.py  geometry_utils.py  gplates.py  paleoearth.py  plate_model.py  quaternions.py  resample_line.py  rotation.py  spherical_triangle.py  subduction_teeth.py  topology.py  utils.py
src/gwspy/: __init__.py  _auth.py  env.template  paleoearth.py  reconstruction.py  rotation.py  spherical_triangle.py  subduction_teeth.py  topology.py  utils.py
tests/: importer.py  run.sh  test_coastlines.py  test_examples.py  test_geometry_utils.py  test_reconstruction.py  test_subduction_teeth.py  test_topology.py  utils.py
