[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gplates-ws-proxy"
dynamic = ["version"]
description = "GPlates Web Service Python client/proxy"
readme = "README.md"
authors = [{ name = "Michael Chin", email = "michael.chin@sydney.edu.au" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]
keywords = ["GPlates", "RESTful", "Web Service", "Plate Tectonics"]
dependencies = [
    "python-dotenv",
    "requests",
]
requires-python = ">=3.9"

[tool.setuptools.packages.find]
where = ["src"]
exclude = ["gplates_ws_proxy.tests*"]

[tool.setuptools.package-data]
gplates_ws_proxy = ["examples/*.ipynb"]

[tool.setuptools.dynamic]
version = {attr = "gplates_ws_proxy.__version__"}

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/michaelchin/gplates-python-proxy"

[project.scripts]
gplates-ws-proxy = "gplates_ws_proxy.__main__:main"